# materia

./: CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  alertkey.hex  alertkey.pem  configure.ac  genesiscoinbase.hex  genesiscoinbase.pem  libmateriaconsensus.pc.in  testnetalert.hex  testnetalert.pem
build-aux/m4/: materia_find_bdb48.m4  materia_qt.m4  materia_subdir_to_include.m4
contrib/: README.md  gitian-build.sh  materia-cli.bash-completion  materia-qt.pro  materia-tx.bash-completion  materiad.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/debian/: README.md  changelog  (+15 more)
depends/: Makefile  README.md  config.site.in  description.md
doc/: Doxyfile  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  reduce-traffic.md  release-notes-materia.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
qa/: README.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  blockencodings.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  dbwrapper.h  hash.h  httprpc.h  httpserver.cpp  httpserver.h  indirectmap.h  init.cpp  init.h  key.cpp  key.h  (+52 more)
src/bench/: bench.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/crypto/ctaes/: README.md
src/leveldb/: build_detect_platform
src/policy/: fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  materia.cpp  materia.qrc  materia_locale.qrc  materiaaddressvalidator.cpp  materiaaddressvalidator.h  materiaamountfield.cpp  materiaamountfield.h  materiagui.cpp  materiagui.h  materiastrings.cpp  materiaunits.cpp  materiaunits.h  networkstyle.cpp  networkstyle.h  notificator.h  openuridialog.cpp  openuridialog.h  (+52 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: materia_af.ts  materia_af_ZA.ts  materia_ar.ts  materia_be_BY.ts  materia_bg.ts  materia_bg_BG.ts  materia_ca.ts  materia_ca@valencia.ts  materia_ca_ES.ts  materia_cs.ts  materia_cs_CZ.ts  materia_cy.ts  materia_da.ts  materia_de.ts  materia_el.ts  materia_el_GR.ts  materia_en.ts  materia_en_GB.ts  materia_eo.ts  materia_es.ts  materia_es_AR.ts  materia_es_CL.ts  materia_es_CO.ts  materia_es_DO.ts  materia_es_ES.ts  materia_es_MX.ts  materia_es_UY.ts  materia_es_VE.ts  materia_et.ts  materia_eu_ES.ts  materia_fa.ts  materia_fa_IR.ts  materia_fi.ts  materia_fr.ts  materia_fr_CA.ts  materia_fr_FR.ts  materia_gl.ts  materia_he.ts  materia_hi_IN.ts  materia_hr.ts  (+46 more)
src/qt/res/: materia-qt-res.rc
src/qt/test/: Makefile  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: interpreter.cpp  interpreter.h  ismine.h  materiaconsensus.cpp  materiaconsensus.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_materia_NativeSecp256k1.c  org_materia_NativeSecp256k1.h  org_materia_Secp256k1Context.c  org_materia_Secp256k1Context.h
src/secp256k1/src/java/org/materia/: NativeSecp256k1.java  NativeSecp256k1Test.java  NativeSecp256k1Util.java  Secp256k1Context.java
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: DoS_tests.cpp  Makefile  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  materia-util-test.py  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum10.h  (+16 more)
src/test/data/: README.md  materia-util-test.json  tx_valid.json
src/univalue/lib/: univalue_escapes.h
src/wallet/: crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: crypto_tests.cpp  rpc_wallet_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+155 files in other folders)
